# sqlmodel-tutorial

./: .env.example  .gitignore  README.md  pyproject.toml
src/app/: __init__.py  app.py  crud.py  database.py  deps.py  main.py  models.py  seeders.py
src/app/routes/: heroes.py  team.py
