[project]
name = "sqlmodel-tutorial"
version = "0.1.0"
description = "Default template for Rye package"
authors = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "sqlmodel>=0.0.16",
]
readme = "README.md"
requires-python = ">= 3.11"
license = {text = "MIT"}

[project.scripts]
hello = "app:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.10",
    "mypy>=1.8.0",
    "pre-commit>=3.6.2",
    "pytest>=8.0.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.2",
]

[tool.rye.scripts]
lint = "pre-commit run --all-files"
docs = "mkdocs serve"
test = "pytest -v tests"
# Scripts for the apps
app = { call = "app" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # pycodestyle - Error
    "F", # Pyflakes
    "I", # isort
    "W", # pycodestyle - Warning
    "UP", # pyupgrade
]
ignore = [
    "E501", # line-too-long
    "W191", # tab-indentation
    "F401", # unused-import
]
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
strict = true

[tool.coverage.run]
parallel = true
source = [
    "app",
    "tests",
]
